--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --prod --base-href 'https://prahaladbelavadi.github.io/pimpmystridecrew.co/'",
-    "deploy": "npm run build && ngh --dir dist/pimpmystridecrew",
+    "build": "ng build",
+    "deploy": "ng build --prod --base-href 'https://prahaladbelavadi.github.io/pimpmystridecrew.co/' && ngh --dir dist/docs",
+    "docs": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
