--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "deploy": "ng build --prod --base-href 'https://prahaladbelavadi.github.io/pimpmystridecrew.co/'",
-    "direct_deploy":"ng deploy --base-href https://pimpmystridecrew.co",
+    "deploy": "ng build --prod --base-href 'https://prahaladbelavadi.github.io/pimpmystridecrew.co/' && ng deploy --base-href https://pimpmystridecrew.co",
+    "direct_deploy":"",
     "docs": "npm run deploy && git add . && git commit -m 'generate build' && git push",
     "test": "ng test",
     "lint": "ng lint",
